Revisión toString Pieza, Fabrica, checkeo de GUI. Agregado fabrica propia para cumplir con el enunciado